fix: align the disk/node conditions in a vertical way within edit disk modal
(cherry picked from commit 05d8d9145d8093747000dd9b5d8956e86ef244c9)

--- a/src/routes/host/components/EditableDiskItem.less
+++ b/src/routes/host/components/EditableDiskItem.less
@@ -18,9 +18,8 @@
       width: 100%;
     }
     .control {
-      padding: 5px 7px;
+      padding: 5px 14px;
       width: 100%;
     }
-  
   }
 }
